--- a/sabro_communications/views/view.xml
+++ b/sabro_communications/views/view.xml
@@ -238,19 +238,20 @@ else:
             <field name="arch" type="xml">
                 <form string="SaBRO Installation Wizard"  edit="1" create="0" delete="0">
                     <sheet>
+						<group string="">
+                           	<span attrs="{'invisible': [('otp_pending', '=', True)]}">Provide Details for SaBRO Setup</span><br />
+                           	<span attrs="{'invisible': [('otp_pending', '!=', True)]}">SaBRO Details</span><br />
+		                    <field name="otp_pending" invisible="1"/>
+		                    <field name="name" required="1" placeholder="Enter Company Name"/>
+		                    <field name="admin_name" required="1" placeholder="Enter SaBRO Administrator's Name" />
+		                    <field name="node_api_username" required="1" placeholder="something@example.com" />
+		                    <field name="country_id" required="1"/>
+		                    <field name="mobile" required="1" placeholder="+44****** format only" attrs="{'invisible': [('country_id', '=', False)]}" />
+		                    <field name="sub_domain" required="1" string="Sub Domain" placeholder="Enter only small letters, digits and hyphens" attrs="{'invisible': [('country_id', '=', False)]}" />
+		                    <button class="btn btn-primary" style="width:100%;" name="%(sabro_communications.view_sabro_installer_verification_action)d" string="Verify OTP" type="action" attrs="{'invisible': [('otp_pending', '!=', True)]}"/>
+						</group>
                         <group>
-                            <group string="">
-                            	<span attrs="{'invisible': [('otp_pending', '=', True)]}">Provide Details for SaBRO Setups</span><br />
-                            	<span attrs="{'invisible': [('otp_pending', '!=', True)]}">SaBRO Details</span><br />
-			                    <field name="otp_pending" invisible="1"/>
-			                    <field name="name" placeholder="Enter Company Name"/>
-			                    <field name="admin_name" placeholder="Enter SaBRO Administrator's Name" />
-			                    <field name="node_api_username" placeholder="something@example.com" />
-			                    <field name="country_id" required="1"/>
-			                    <field name="mobile" placeholder="+44****** format only" attrs="{'invisible': [('country_id', '=', False)]}" />
-			                    <field name="sub_domain" placeholder="Enter only small letters, digits and hyphens" attrs="{'invisible': [('country_id', '=', False)]}" />
-			                    <button class="btn btn-primary" style="width:100%;" name="%(sabro_communications.view_sabro_installer_verification_action)d" string="Verify OTP" type="action" attrs="{'invisible': [('otp_pending', '!=', True)]}"/>
-                            </group>
+			                <span attrs="{'invisible': [('country_id', '=', False)]}" ><i>We will provision a SaBRO instance for you at <b>[Sub Domain].allipcloud.com</b></i></span>
                         </group>
                     </sheet>
                 </form>
